test/TestPhases/parser/valid/stringtabs.blc
@@[CInclude (header = "forall.h")]

@[CFunction (binding = "tab in string" )]
extern function f()

@[CFunction (binding = """
	    hello
	    world""")]
extern function h()



@[EntryPoint]
activity Main () ()
    f()
    await true
end